css/core.css
body {
	font: normal 13px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

/* Debugging functionality {{{ */
.debug .cached {
	display: block !important;
}
/* }}} */

.cached {
	border: 2px solid blue;
	/* Change this to 'block' to show the cache blocks on the thumbnails */
	display: none;
	width: 32px;
	height: 32px;
	position: absolute;
	z-index: 10;
}

.cached.img-loaded {
	border: 2px solid green !important;
}

.cached.img-loading {
	border: 2px solid yellow !important;
}

.cached.img-none {
	border: 2px solid red !important;
}

.nomouse {
	cursor: none;
}

#list {
	list-style: none;
	padding: 0;
	text-indent: 0px;
}

#list li {
	display: block;
	width: 156px;
	height: 170px;
	float: left;
	border: 1px solid transparent;
	overflow: hidden;
	margin: 3px;
	border-radius: 5px;
	-moz-border-radius: 5px;
}

#list li > div {
	display: block;
	width: 150px;
	height: 150px;
	vertical-align: middle;
	text-align: center;
	padding: 0 3px 0 3px;
}

#list li .imgframe {
	display: table-cell;
	width: 150px;
	height: 150px;
	vertical-align: middle;
	text-align: center;
}

#list li img.thumb {
	margin-left: auto;
	margin-right: auto;
	vertical-align: bottom;
	display: none; /* Until its loaded anyway */
	border-radius: 6px;
	-moz-border-radius: 6px;
}

#list li strong {
	display: block;
	font-weight: normal;
	text-align: center;
	font-size: 8pt;
}

#list li .emblems {
	z-index: 10;
	top: -50px;
	position: relative;
	display: block;
	width: 100%;
	height: 20px;
	text-align: right;
	margin: 10px -15px;
}

#list li .emblems .foldericon {
	display: block;
	width: 16px;
	height: 16px;
	background: url('../images/emblems/foldericon.png') no-repeat;
}

/* Bootstrap fixes {{{ */
/* Force the locations of the glyicons packages as booswatch often screws it up */
[class^="icon-"], [class*=" icon-"] {
	background-image: url('../lib/bootstrap/bootstrap/img/glyphicons-halflings.png') !important;
}
.icon-white {
	background-image: url('../lib/bootstrap/bootstrap/img/glyphicons-halflings-white.png') !important;
}
/* }}} */
/* DynaTree fixes {{{ */
.dynatree-title {
	cursor: pointer;
}

ul.dynatree-container {
	border: none !important;
}
/* }}} */
/* jGrowl fixes {{{ */
.jGrowl {
	padding: 5px 10px;
}

.jGrowl img {
	float: left;
	margin-right: 10px;
}

.jGrowl .jGrowl-notification {
	min-height: 45px !important;
}

.jGrowl .progress {
	margin: 5px;
}
/* }}} */
/* jQueryContextMenu & Bootstrap fixes {{{ */
.context-menu-list {
	list-style: none !important;
}

.context-menu-list .context-menu-item {
	display: block !important;
	width: auto !important;
	height: auto !important;
	line-height: 100% !important;
}
.context-menu-item {
	text-shadow: none !important;
	color: black;
}
/* }}} */

